--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "ext-json": "*",
         "yiisoft/yii2": ">=2.0.13",
-        "guzzlehttp/guzzle": "~6.2",
+        "guzzlehttp/guzzle": "dev-master",
         "ext-SimpleXML": "^7.2"
     },
     "require-dev": {
