--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "ext-json": "*",
         "yiisoft/yii2": ">=2.0.13",
         "guzzlehttp/guzzle": "dev-master",
-        "ext-SimpleXML": "^7.2"
+        "ext-SimpleXML": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10@dev",
